fixed skillbox alignment

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -81,7 +81,7 @@ ul.skills {
 .skillbox {
   background-color: rgba(0,0,0,0.7);
   float: right;
-  margin-top: -32px;
+  margin-top: -30px;
   padding: 40px;
   height: 1200px;
   width: 50%;
